# aeson-injector

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  aeson-injector.cabal  aeson-injector.sublime-project  default.nix  ghcid.sh  pkgs.nix  release.nix  shell.nix  stack.yaml  upload-docs.sh
.github/workflows/: haskell-ci.yml
src/Data/Aeson/: Unit.hs  WithField.hs
src/Data/Aeson/WithField/: Internal.hs
test/: Main.hs
