name:                aeson-injector
version:             1.0.0.0
synopsis:            Injecting fields into aeson values
description:         See Readme.md
license:             MIT
license-file:        LICENSE
author:              Anton Gushcha 
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Data, JSON, Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type: git
  location: https://github.com/NCrashed/aeson-injector

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Data.Aeson.WithField
    
  build-depends: 
      base >= 4.7 && < 4.9
    , aeson >= 0.11
    , deepseq >= 1.4
    , lens >= 4.13
    , swagger2 >= 2.0
    , text >= 1.2
    , unordered-containers >= 0.2.7

test-suite test-aeson-injector
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: 
      base
    , aeson
    , aeson-injector
    , HUnit >= 1.3
    , lens
    , swagger2 
    , text